--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             _|____|_____|____|_____|___|_______|_|______|__|______|__|_____|____|___
 
 
+
                          |--  Some Programs Keep Me Learning...  --|
 
                               ______________________________
@@ -21,6 +22,12 @@
                                 |  ,--------------------------,
                                 \_/__________________________/
 
+
+                                This WebKitApplication Bundle
+                                 Contains the album contents
+                                  Of Christopher Johnson's:
+ 
+                                        "The Flight"
 
                               Copyright (C) 2020 SPEKTRUMCreations
                                      All Rights Reserved.
@@ -80,3 +87,62 @@
 
 </SPKML>
 //-->
+  <HTML>
+
+  <HEAD>
+
+      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="viewport" content="user-scalable=yes, width=100vw, height=100vh, initial-scale=1.0, viewport-fit=cover">
+      <meta name="apple-touch-fullscreen" content="yes" />
+      <meta name="application-name" content="com.SPEKTRUMCreations.Albums.TheFlight" type="WebA/LPA-Bundle">
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-transparent">
+      <meta name="color-scheme" content="only dark">
+      <!-- Add Light Theme also //-->
+      <meta name="apple-mobile-web-app-title" content="&quot;The Flight&quot;">
+      <meta name="description" content="'A WebApp initially built to run specificlly on iOS devices, to bring the web-app music album application to the world...  Enjoy this app and enjoy 'The Flight' --Christopher Johnson">
+      <meta name="keywords" content="SPKML, 'Web App', iOS, Music, Album, Songs, Lyrics, Liners, Notes, Cover, Artwork, Rock, Singer-Songwriter, 'Kansas City', Missouri, Denver, Colorado">
+      <meta name="author" content="Christopher Johnson, New Media Artisan: @spkml">
+
+      <title>&quot;The Flight&quot;</title>
+
+      <!-- iPhone ICON -->
+      <link href="./icons/apple-touch-icon-57x57.png" sizes="57x57" rel="apple-touch-icon">
+      <!-- iPad ICON-->
+      <link href="./icons/apple-touch-icon-72x72.png" sizes="72x72" rel="apple-touch-icon">
+      <!-- iPhone (Retina) ICON-->
+      <link href="./icons/apple-touch-icon-114x114.png" sizes="114x114" rel="apple-touch-icon">
+
+      <!-- iPhone 11 - SPLASHSCREEN 	414x896 pt (828x1792 px @2x) -->
+
+      <link href="./images/start-image.jpg" rel="apple-touch-startup-image">
+      <!-- iPhone 6/7/8 -->
+      <link href="./images/start-image.jpg" media="(device-width: 375px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+      <!-- iPhone 6 Plus/7 Plus/8 Plus -->
+      <link href="./images/start-image.jpg" media="(device-width: 414px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+      <!-- iPhone SPLASHSCREEN-->
+      <link href="./images/start-image.jpg" media="(device-width: 320px)" rel="apple-touch-startup-image">
+      <!-- iPhone (Retina) SPLASHSCREEN-->
+      <link href="./images/start-image.jpg" media="(device-width: 320px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image">
+
+      <!-- iPhone 11 - SPLASHSCREEN 	414x896 pt (828x1792 px @2x) -->
+
+      <link href="./css/index.css" rel="stylesheet" type="text/css" media="screen">
+
+
+  </HEAD>
+
+  <BODY>
+      <H2>LPA FILES, BUNDLED BUT ARE THEY APPS?</H2>
+      <p>If we can agree that webpacked webapps are at first an acceptable crossplatform container for the LPA file bundle, the next question is can it or should it be a stand alone file type with built in player to play the embedded content?</p>
+
+      <p>In the spirit of FOSS, for accesibility by Timmy the bedroom hobby-ist musician as well as by artists, the likes of Paul McCartney and Ringo Starr, the LPA format has the goal of being widely used and hopefully can standardized a release format by presenting a platform to develop the .lpa file type for eventual mime-type recognition.</p>
+
+      <p>The current state of things seemes to make it clear that mp3 is the most compatible choice to start from. MP3 uses the power of embedded content in the ID3 Tags. Taken a step further and especially when filled out in fullness the mp3 id3/4 tag content will make the .LPA file type make you want to sing...</p>
+
+      <P>Along other ideas, so long as the content is represented by a fully navigatable, fully accessible by controls, music album, the .lpa file standards will meet minimum requirements of acceptability for licensed release.</P>
+
+
+  </BODY>
+
+  </HTML>
